Add padding to navigation menus, blow away some caret styling

--- a/site/src/main/resources/theme/css/main.css
+++ b/site/src/main/resources/theme/css/main.css
@@ -138,7 +138,7 @@ body {
 .nav-list > li > a > i { position: absolute; margin-left: -20px; }
 
 .navbar .nav { 
-    margin-top: 10px; 
+    margin-top: 0;
     margin-right: 40px; 
 }
 
