--- a/site/src/main/resources/theme/css/main.css
+++ b/site/src/main/resources/theme/css/main.css
@@ -246,3 +246,254 @@ div.ramp span.floating {
 }
 
 math { font-size: 1.6rem; }
+
+.section table {
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    color: #515161;
+    text-rendering: optimizelegibility;
+}
+
+table {
+max-width:100%;
+border-collapse:collapse;
+border-spacing:0;
+background-color:transparent;
+}
+
+.table {
+width:100%;
+margin-bottom:18px;
+}
+
+.table th,.table td {
+line-height:18px;
+text-align:left;
+vertical-align:top;
+border-top:1px solid #ddd;
+padding:8px;
+}
+
+.table th {
+font-weight:700;
+}
+
+.table thead th {
+vertical-align:bottom;
+}
+
+.table tbody+tbody {
+border-top:2px solid #ddd;
+}
+
+.table-condensed th,.table-condensed td {
+padding:4px 5px;
+}
+
+.table-bordered {
+border:1px solid #ddd;
+border-left:0;
+border-collapse:collapsed;
+-webkit-border-radius:4px;
+-moz-border-radius:4px;
+border-radius:4px;
+}
+
+.table-bordered th,.table-bordered td {
+border-left:1px solid #ddd;
+}
+
+.table-bordered thead:first-child tr:first-child th:first-child,.table-bordered tbody:first-child tr:first-child td:first-child {
+-webkit-border-radius:4px 0 0 0;
+-moz-border-radius:4px 0 0;
+border-radius:4px 0 0 0;
+}
+
+.table-bordered thead:first-child tr:first-child th:last-child,.table-bordered tbody:first-child tr:first-child td:last-child {
+-webkit-border-radius:0 4px 0 0;
+-moz-border-radius:0 4px 0 0;
+border-radius:0 4px 0 0;
+}
+
+.table-bordered thead:last-child tr:last-child th:first-child,.table-bordered tbody:last-child tr:last-child td:first-child {
+-webkit-border-radius:0 0 0 4px;
+-moz-border-radius:0 0 0 4px;
+border-radius:0 0 0 4px;
+}
+
+.table-bordered thead:last-child tr:last-child th:last-child,.table-bordered tbody:last-child tr:last-child td:last-child {
+-webkit-border-radius:0 0 4px 0;
+-moz-border-radius:0 0 4px;
+border-radius:0 0 4px 0;
+}
+
+.table-striped tbody tr:nth-child(odd) td,.table-striped tbody tr:nth-child(odd) th {
+background-color:#f9f9f9;
+}
+
+.table tbody tr:hover td,.table tbody tr:hover th {
+background-color:#f5f5f5;
+}
+
+table .span1 {
+float:none;
+width:44px;
+margin-left:0;
+}
+
+table .span2 {
+float:none;
+width:124px;
+margin-left:0;
+}
+
+table .span3 {
+float:none;
+width:204px;
+margin-left:0;
+}
+
+table .span4 {
+float:none;
+width:284px;
+margin-left:0;
+}
+
+table .span5 {
+float:none;
+width:364px;
+margin-left:0;
+}
+
+table .span6 {
+float:none;
+width:444px;
+margin-left:0;
+}
+
+table .span7 {
+float:none;
+width:524px;
+margin-left:0;
+}
+
+table .span8 {
+float:none;
+width:604px;
+margin-left:0;
+}
+
+table .span9 {
+float:none;
+width:684px;
+margin-left:0;
+}
+
+table .span10 {
+float:none;
+width:764px;
+margin-left:0;
+}
+
+table .span11 {
+float:none;
+width:844px;
+margin-left:0;
+}
+
+table .span12 {
+float:none;
+width:924px;
+margin-left:0;
+}
+
+table .span13 {
+float:none;
+width:1004px;
+margin-left:0;
+}
+
+table .span14 {
+float:none;
+width:1084px;
+margin-left:0;
+}
+
+table .span15 {
+float:none;
+width:1164px;
+margin-left:0;
+}
+
+table .span16 {
+float:none;
+width:1244px;
+margin-left:0;
+}
+
+table .span17 {
+float:none;
+width:1324px;
+margin-left:0;
+}
+
+table .span18 {
+float:none;
+width:1404px;
+margin-left:0;
+}
+
+table .span19 {
+float:none;
+width:1484px;
+margin-left:0;
+}
+
+table .span20 {
+float:none;
+width:1564px;
+margin-left:0;
+}
+
+table .span21 {
+float:none;
+width:1644px;
+margin-left:0;
+}
+
+table .span22 {
+float:none;
+width:1724px;
+margin-left:0;
+}
+
+table .span23 {
+float:none;
+width:1804px;
+margin-left:0;
+}
+
+table .span24 {
+float:none;
+width:1884px;
+margin-left:0;
+}
+
+[class^="icon-"],[class*=" icon-"] {
+display:inline-block;
+width:14px;
+height:14px;
+line-height:14px;
+vertical-align:text-top;
+background-image:url(../img/glyphicons-halflings.png);
+background-position:14px 14px;
+background-repeat:no-repeat;
+margin-right:.3em;
+}
+
+[class^="icon-"]:last-child,[class*=" icon-"]:last-child {
+margin-left:0;
+}
+
+.table colgroup+thead tr:first-child th,.table colgroup+thead tr:first-child td,.table thead:first-child tr:first-child th,.table thead:first-child tr:first-child td,.table-bordered thead:first-child tr:first-child th,.table-bordered tbody:first-child tr:first-child th,.table-bordered tbody:first-child tr:first-child td {
+border-top:0;
+}
