Change scope of css. This block is only meant to style a section on the homepage, but it was unintentionally affecting the introduction/what-is-geotrellis page within the documentation

--- a/site/src/main/resources/theme/css/main.css
+++ b/site/src/main/resources/theme/css/main.css
@@ -147,19 +147,19 @@ button.close:hover {
   border-color: #357ebd;
 }
 
-#what-is-geotrellis {
+body.page-home #what-is-geotrellis {
   padding-top: 52px; }
-  #what-is-geotrellis img {
+  body.page-home #what-is-geotrellis img {
     max-width: 100%;
     height: auto; }
-  #what-is-geotrellis hr {
+  body.page-home #what-is-geotrellis hr {
     margin-bottom: 40px;
     margin-top: 40px; }
-    #what-is-geotrellis hr.half {
+    body.page-home #what-is-geotrellis hr.half {
       width: 50%;
       margin-right: auto;
       margin-left: auto; }
-  #what-is-geotrellis .setup-container {
+  body.page-home #what-is-geotrellis .setup-container {
     position: relative; }
 
 #case-studies {
