--- a/site/src/main/resources/theme/css/main.css
+++ b/site/src/main/resources/theme/css/main.css
@@ -1,5 +1,14 @@
 /*Homepage*/
 
+.map-preview-icon > img {
+  -webkit-filter: grayscale(100%);
+  -webkit-transition: -webkit-filter 200ms;
+}
+
+.map-preview-icon:hover > img {
+  -webkit-filter: grayscale(0%);
+}
+
 .carousel-indicators li.active {
   display: inline-block;
 }
