--- a/site/_includes/scaladoc-versions.html
+++ b/site/_includes/scaladoc-versions.html
@@ -1,6 +1,9 @@
 <div class="option-pane">
   <ul>
-    <li><a href="#">Latest</a></li>
-    <li><a href="http://geotrellis.github.io/scaladocs/0.9/#package">Version 0.9</a></li>
+    <li><a href="https://geotrellis.github.io/scaladocs/latest/#geotrellis.package">Latest</a></li>
+    <li><a href="http://geotrellis.github.io/scaladocs/0.9//#geotrellis.package">Version 0.9</a></li>
+    <li><a href="http://geotrellis.github.io/scaladocs/0.8/#geotrellis.package">Version 0.8</a></li>
+    <li><a href="http://geotrellis.github.io/scaladocs/0.7/#geotrellis.package">Version 0.7</a></li>
+    <li><a href="http://geotrellis.github.io/scaladocs/0.6/#geotrellis.package">Version 0.6</a></li>
   </ul>
 </div>
