--- a/deployment/ansible/roles/geotrellis-site.app/templates/geotrellis-site-nginx.conf.j2
+++ b/deployment/ansible/roles/geotrellis-site.app/templates/geotrellis-site-nginx.conf.j2
@@ -4,12 +4,15 @@ server {
 
   access_log /var/log/nginx/geotrellis.access.log;
   root /opt/geotrellis-site/site/_site;
-  index index.html;
 
   location /gt/ {
     proxy_pass http://localhost:9090/gt/;
     proxy_set_header Host $http_host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_redirect  off;
+  }
+
+  location / {
+    try_files $uri $uri/ $uri.html =404;
   }
 }
