Add link to 0.9 docs

--- a/site/_includes/markdowndoc-versions.html
+++ b/site/_includes/markdowndoc-versions.html
@@ -2,5 +2,6 @@
   <ul>
     <li><a href="https://github.com/geotrellis/geotrellis/tree/master/docs#geotrellis-markdown-index">Latest</a></li>
     <li>Version 0.10</li>
+    <li><a href="0.9docs/raster">Version 0.9</a></li>
   </ul>
 </div>
