--- a/site/_includes/09sidebar.html
+++ b/site/_includes/09sidebar.html
@@ -1,10 +1,18 @@
 
+<div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+              <h2 class="overview"><span class="brandname-emphasis">GeoTrellis</span> Version 0.9 Documentation</h2>
+            </div>
+        </div>
+    </div>
+</div>
 <aside class="span3 sidebar">
   <div class="well" style="padding: 8px 0;">
     <ul class="nav nav-list">
-      <li class="nav-header">0.9.0</li>
-      <li class="active">
-        <a href="#"><i class="icon-white icon-chevron-right"></i> GeoTrellis</a>
+      <li>
+        <a href="/0.9docs/raster"><i class="icon-white icon-chevron-right"></i> GeoTrellis</a>
         <ul class="nav nav-list">
           <li>
             <a href="/0.9docs/raster"><i class="icon-chevron-right"></i> Rasters</a>
