--- a/site/_includes/cssimports.html
+++ b/site/_includes/cssimports.html
@@ -1,6 +1,7 @@
 <link href="http://fonts.googleapis.com/css?family=Signika:300" rel="stylesheet" type="text/css">
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
+<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 <link href="/css/mentor.min.css" rel="stylesheet"/>
 <link href="/css/main.css" rel="stylesheet">
 <link href="/css/slider.css" rel="stylesheet"/>
