--- a/site/css/main.css
+++ b/site/css/main.css
@@ -296,7 +296,7 @@ div, p {
   font-size: 1.6rem; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family:"ff-dagny-web-pro", 'Signika', sans-serif; }
+  font-family: 'Lato', sans-serif; }
 
 html,
 body {
@@ -364,7 +364,7 @@ button.close:hover {
   border: none;
   min-height: 52px; }
   .navbar .navbar-brand {
-    font-family:'Signika', sans-serif;
+    font-family:'Lato', sans-serif;
     font-weight: 300;
     color: white;
     text-indent: 38px;
@@ -420,7 +420,7 @@ button.close:hover {
     margin-bottom: 10px; }
   .jumbotron p {
     font-size: 2.4rem;
-    font-family:"ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro",: 'Signika', sans-serif;
+    font-family: 'Lato', sans-serif;
     color: #fff29d;
     margin-bottom: 24px; }
     .jumbotron p > a {
@@ -470,7 +470,7 @@ body.page-home #what-is-geotrellis {
       margin: 0;
       padding: 14px 12px;
       width: 100%;
-      font-family:"ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro",: 'Signika', sans-serif;
+      font-family:"Lato", sans-serif;
       font-size: 1.6rem;
       color: #FFF;
       font-weight: 400; }
@@ -501,7 +501,7 @@ body.page-home #what-is-geotrellis {
       margin: 0;
       padding: 14px 12px;
       width: 100%;
-      font-family:"ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro","ff-dagny-web-pro",: 'Signika', sans-serif;
+      font-family:"Lato", sans-serif;
       font-size: 1.6rem;
       color: #FFF;
       font-weight: 400; }
