--- a/site/_includes/header.html
+++ b/site/_includes/header.html
@@ -5,7 +5,7 @@
       <a class="navbar-brand" href="/"><span></span> GeoTrellis</a>
       <ul class="nav collapse navbar-collapse" id="menu-collapse">
         <li><a href="/">Overview</a></li>
-        <li><a href="/documentation">Documentation</a></li>
+        <li><a href="/documentation.html">Documentation</a></li>
         <li><a href="https://github.com/geotrellis/geotrellis">Source</a></li>
       </ul>
     </div>
