--- a/static/_includes/rtd-links.html
+++ b/static/_includes/rtd-links.html
@@ -1,7 +1,8 @@
 <div class="option-pane">
   <ul>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/setup/">Setup</a></li>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/quickstart/">Quick Start</a></li>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/core-concepts/">Core Concepts</a></li>
+    <li><a href="http://geotrellis.readthedocs.io/en/latest/">Home</a></li>
+    <li><a href="http://geotrellis.readthedocs.io/en/latest/tutorials/setup/">Setup</a></li>
+    <li><a href="http://geotrellis.readthedocs.io/en/latest/tutorials/quickstart/">Quick Start</a></li>
+    <li><a href="http://geotrellis.readthedocs.io/en/latest/guide/core-concepts/">Core Concepts</a></li>
   </ul>
 </div>
