--- a/static/_includes/cssimports.html
+++ b/static/_includes/cssimports.html
@@ -1,4 +1,4 @@
-<link href="http://fonts.googleapis.com/css?family=Signika:300" rel="stylesheet" type="text/css">
+<link href="https://fonts.googleapis.com/css?family=Signika:300" rel="stylesheet" type="text/css">
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
 <link href="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" rel="stylesheet" />
 <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
