--- a/static/_includes/footer.html
+++ b/static/_includes/footer.html
@@ -5,7 +5,7 @@
       <div class="row-fluid">
         <div class="span2 copyright">
           <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
           </a>
         </div>
 
