--- a/static/_includes/footer.html
+++ b/static/_includes/footer.html
@@ -4,8 +4,8 @@
     <div class="container">
       <div class="row-fluid">
         <div class="span2 copyright">
-          <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-            <img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
+          <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">
+            <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" />
           </a>
         </div>
 
