Add docs CloudFront distribution
- Forwards requests for docs.geotrellis.io to geotrellis.readthedocs.io
- Update documentation links

--- a/static/_includes/rtd-links.html
+++ b/static/_includes/rtd-links.html
@@ -1,8 +1,8 @@
 <div class="option-pane">
   <ul>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/">Home</a></li>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/tutorials/setup/">Setup</a></li>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/tutorials/quickstart/">Quick Start</a></li>
-    <li><a href="http://geotrellis.readthedocs.io/en/latest/guide/core-concepts/">Core Concepts</a></li>
+    <li><a href="https://docs.geotrellis.io">Home</a></li>
+    <li><a href="https://docs.geotrellis.io/en/latest/tutorials/setup.html">Setup</a></li>
+    <li><a href="https://docs.geotrellis.io/en/latest/tutorials/quickstart.html">Quick Start</a></li>
+    <li><a href="https://docs.geotrellis.io/en/latest/guide/core-concepts.html">Core Concepts</a></li>
   </ul>
 </div>
