--- a/static/_includes/scaladoc-versions.html
+++ b/static/_includes/scaladoc-versions.html
@@ -1,6 +1,7 @@
 <div class="option-pane">
   <ul>
     <li><a href="https://geotrellis.github.io/scaladocs/latest/#geotrellis.package">Latest</a></li>
+    <li><a href="https://geotrellis.github.io/scaladocs/1.1/#geotrellis.package">Version 1.1</a></li>
     <li><a href="https://geotrellis.github.io/scaladocs/1.0/#geotrellis.package">Version 1.0</a></li>
     <li><a href="https://geotrellis.github.io/scaladocs/0.10/#geotrellis.package">Version 0.10</a></li>
     <li><a href="https://geotrellis.github.io/scaladocs/0.9/#geotrellis.package">Version 0.9</a></li>
