--- a/_sass/06_components/_demo-slider.scss
+++ b/_sass/06_components/_demo-slider.scss
@@ -232,11 +232,17 @@ input.demo-amount {
 // Map styles
 ////////////////////////
 .demo-map {
-    height: 30vh;
+    height: 20vh;
     max-height: 60rem;
 
     @media all and (min-width: $bp-med) {
         height: 80vh;
+    }
+}
+
+.demo-map {
+    @media all and (max-width: $bp-med) {
+        pointer-events: none;
     }
 }
 
@@ -254,11 +260,7 @@ input.demo-amount {
     box-shadow: $box-shadow;
 
     @media all and (max-width: $bp-med) {
-        bottom: 50px;
-        right: auto;
-        left: 50%;
-        transform: translateX(-50%);
-        width: fit-content;
+        display: none;
     }
 }
 
