Design polish post-crossbrowser check

--- a/_includes/call-to-action_secondary.html
+++ b/_includes/call-to-action_secondary.html
@@ -1,4 +1,4 @@
-<div class="call-to-action call-to-action--secondary call-to-action--{{ include.type }}">
+<div class="call-to-action call-to-action--secondary">
     <div class="call-to-action__inner">
         <div class="call-to-action__column">
             <h3 class="call-to-action__title">
