Nitpicky capitalization and grammar tweaks

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,12 +1,12 @@
 <footer class="footer">
     <div class="footer__inner">
-        <a href="/"><img class="footer__brand" src="{{ site.baseurl }}/assets/images/geotrellis-logo-darkbg.svg" alt="Geotrellis logo"></a>
+        <a href="/"><img class="footer__brand" src="{{ site.baseurl }}/assets/images/geotrellis-logo-darkbg.svg" alt="GeoTrellis logo"></a>
         <nav>
             <a role="menuitem" href="{{ site.url }}/documentation">
                 Documentation
             </a>
             <a role="menuitem" href="https://github.com/geotrellis/geotrellis">
-                Github
+                GitHub
             </a>
         </nav>
         <small class="footer__copyright">
