--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar">
     <div class="navbar__inner">
         <a href="/" class="navbar__brand" title="Azavea Careers homepage">
-            <img src="{{ site.baseurl }}/assets/images/geotrellis-logo-darkbg.svg" alt="Geotrellis logo">
+            <img src="{{ site.baseurl }}/assets/images/geotrellis-logo-darkbg.svg" alt="GeoTrellis logo">
         </a>
 
         <nav id="navbar" class="navbar__nav">
@@ -22,7 +22,7 @@
                 <li class="navbar__list-item" role="presentation">
                     <a class="navbar__link" role="menuitem" href="https://github.com/geotrellis/geotrellis">
                         <i class="fab fa-github navbar__link-icon"></i>
-                        Github
+                        GitHub
                     </a>
                 </li>
             </ul>
