--- a/_sass/01_settings/_color.scss
+++ b/_sass/01_settings/_color.scss
@@ -13,7 +13,7 @@ $brand-steel: #D0D9E1;
 $brand-porcelain: #E5EAEE;
 $brand-off-white: #F4F6F8;
 
-// Geotrellis colors
+// GeoTrellis colors
 $brand-navy: #1c2d3f;
 $brand-blue: #417dbf;
 $brand-yellow: #e3d262;
