--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,6 +1,6 @@
 <div class="navbar">
     <div class="navbar__inner">
-        <a href="/" class="navbar__brand" title="Azavea Careers homepage">
+        <a href="/" class="navbar__brand" title="GeoTrellis home">
             <img src="{{ site.baseurl }}/assets/images/geotrellis-logo-darkbg.svg" alt="GeoTrellis logo">
         </a>
 
