Fixup broken links on Geotrellis site

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,7 +16,7 @@
         </div>
 
         <small class="footer__text footer__text--copyright">
-            © 2016 - {{ 'now' | date: "%Y" }} <a href="www.azavea.com">Azavea</a> Inc., using technology to inform research for civic and social impact. All rights reserved. 
+            © 2016 - {{ 'now' | date: "%Y" }} <a href="https://www.azavea.com">Azavea</a> Inc., using technology to inform research for civic and social impact. All rights reserved. 
             Some GeoTrellis features have been supported by grants from the U.S. Dept of Energy (DE-SC0011303) and NASA (NNX16CS04C).
         </small>
         <small class="footer__text footer__text--trademark">
